glib2.0 (2.25.2-1) experimental; urgency=low

  * New upstream development release:
    + debian/libglib2.0-0.install:
      - Add new gsettings tool.
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Update for API additions.

 -- Sebastian Dröge <slomo@debian.org>  Fri, 23 Apr 2010 06:14:47 +0200

glib2.0 (2.25.1-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Update for API additions.
    + debian/libglib2.0-dev.install,
      debian/libglib2.0-0.install:
      - Install new GSettings utitilies and manpages.
  * debian/control.in,
    debian/rules:
    + Enable manpage generation via xsltproc for now until
      https://bugzilla.gnome.org/show_bug.cgi?id=616264
      is fixed.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 20 Apr 2010 09:24:20 +0200

glib2.0 (2.24.0-1) unstable; urgency=low

  * New upstream stable release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated 2.23 symbols to 2.24 to force dependencies on a stable release.
    + debian/rules:
      - Remove check-dist.mk include to allow uploads to unstable again.

 -- Sebastian Dröge <slomo@debian.org>  Fri, 26 Mar 2010 16:59:18 +0100

glib2.0 (2.23.6-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/patches/05_gvariant_test_failure.patch:
    - Backport patch from upstream git to fix a gvariant test that fails
      randomly on x86.

  [ Sebastian Dröge ]
  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.
    + debian/patches/05_gvariant_test_failure.patch:
      - Dropped, merged upstream.
  * debian/rules:
    + Make unit test failures non-fatal again because of race conditions
      in some tests.

 -- Sebastian Dröge <slomo@debian.org>  Mon, 22 Mar 2010 06:10:18 +0100

glib2.0 (2.23.5-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]